--- a/Styles.css
+++ b/Styles.css
@@ -1,53 +1,66 @@
-body {     
-
+body {
     font-family: Arial, sans-serif;
-    background-color:rgb(193, 176, 136);
-    margin: 0;
+    background-color:white;
+    text-align: center;
     padding: 20px;
 }
-img {
-    border-radius:50%;
-    width:200px;
-    height:200px;
-    
-    
 
+.container {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 350px;
+    margin: auto;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
-
+h2 {
     color: #333;
-    text-align: center;
-    border-bottom: 2px solid #555;
-    text-shadow: 0 0 10px rgb(151, 57, 88);
-    padding-bottom: 10px;
 }
 
-p, li {
-    font-size: 16px;
-    color: #555;
-    line-height: 1.6;
-}
-
-b {
-    color: #222;
-}
-
-a {
-    color: #0073e6;
-    text-decoration: none;
+label {
+    display: block;
+    text-align: left;
+    margin-top: 10px;
     font-weight: bold;
 }
 
-a:hover {
-    text-decoration: underline;
+input[type="text"], input[type="email"] {
+    width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
-ul {
-    list-style-type: square;
-    padding-left: 20px;
+input[type="checkbox"] {
+    margin-top: 15px;
 }
 
-li {
-    margin: 5px 0;
+button {
+    background-color: #28a745;
+    color: white;
+    border: none;
+    padding: 10px;
+    width: 100%;
+    margin-top: 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #218838;
+}
+
+.error {
+    color: red;
+    font-size: 12px;
+    text-align: left;
+}
+img{
+    border-radius:50%;
+    vertical-align:middle;
+    height:200px;
+    width:200px;
 }
